--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.9"
+    "@astrojs/mdx": "^0.19.7",
+    "@astrojs/sitemap": "^2.0.2",
+    "astro": "^2.10.9",
+    "astro-auto-import": "^0.3.0",
+    "astro-mdx-code-blocks": "^0.0.3",
+    "autoprefixer": "^10.4.14"
   }
 }
