--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro-auto-import": "^0.3.0",
     "astro-mdx-code-blocks": "^0.0.3",
     "autoprefixer": "^10.4.14"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
   }
 }
