--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "astro-auto-import": "^0.3.0",
     "astro-mdx-code-blocks": "^0.0.3",
     "autoprefixer": "^10.4.14",
-    "fast-average-color-node": "^2.6.0",
-    "sharp": "^0.32.5"
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16"
