--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "astro-mdx-code-blocks": "^0.0.6",
     "autoprefixer": "^10.4.14",
     "cheerio": "^1.0.0-rc.12",
+    "ffprobe": "^1.1.2",
+    "ffprobe-static": "^3.1.0",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "sass": "^1.66.1",
@@ -27,6 +29,8 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@types/ffprobe": "^1.1.8",
+    "@types/ffprobe-static": "^2.0.3",
     "@types/jquery": "^3.5.16"
   }
 }
